--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -28,8 +28,10 @@ build_artifacts:
     before_script:
         - echo $REGISTRY_PASSWORD | docker login -u $REGISTRY_USER --password-stdin $CI_REGISTRY
     script:
+        - echo "Building and pushing backend image..."
         - docker build -t ${CI_REGISTRY_IMAGE}:latest .
         - docker push ${CI_REGISTRY_IMAGE}:latest
+        - echo "Building frontend..."
         - apk add --no-cache git
         - git clone "https://gitlab-ci-token:${CI_JOB_TOKEN}@gitlab.com/taskmanager-group/taskmanager_frontend.git" ../frontend
         - docker run --rm -v "$(pwd)/../frontend:/app" -w /app node:22 sh -c "npm ci && npm run build"
@@ -44,6 +46,7 @@ deploy_to_ec2:
     stage: deploy
     image: alpine:latest
     needs:
+        - test_backend
         - build_artifacts
     script:
         - apk add --no-cache openssh-client docker-compose rsync
@@ -52,11 +55,9 @@ deploy_to_ec2:
         - export SSH_OPTIONS="-i deploy_key.pem -o StrictHostKeyChecking=no"
         - mkdir -p ~/.ssh && chmod 700 ~/.ssh
         - ssh-keyscan $SSH_SERVER_IP >> ~/.ssh/known_hosts
-
         - echo "Deploying artifacts to server..."
         - ssh $SSH_OPTIONS ${SSH_USER}@${SSH_SERVER_IP} "rm -rf ~/taskmanager-prod && mkdir -p ~/taskmanager-prod"
         - rsync -avz -e "ssh $SSH_OPTIONS" ./docker-compose.prod.yml ./nginx ./frontend-dist ${SSH_USER}@${SSH_SERVER_IP}:~/taskmanager-prod/
-
         - |
             ssh $SSH_OPTIONS ${SSH_USER}@${SSH_SERVER_IP} "
               cd ~/taskmanager-prod &&
@@ -78,8 +79,7 @@ deploy_to_ec2:
 
               docker compose pull app &&
               docker compose run --rm app npx prisma migrate deploy &&
-              docker compose up -d --force-recreate
-              echo 'Pruning Docker system...' &&
+              docker compose up -d --force-recreate &&
               docker system prune -af
             "
     rules:
