--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,30 +1,8 @@
 stages:
-    - test
-    - build
     - deploy
-    - pages
 
-test_backend:
-    stage: test
-    image: docker:20.10.16
-    services:
-        - name: docker:20.10.16-dind
-          alias: docker
-    variables:
-        DOCKER_HOST: tcp://docker:2375
-    script:
-        - echo "Running backend integration tests and security scan..."
-        - apk add --no-cache docker-compose
-        - echo "Building test stage for audit..."
-        - docker build --target test -t test-image .
-        - echo "Running npm audit..."
-        - docker run --rm test-image npm audit --audit-level=high
-        - echo "Running integration tests..."
-        - docker-compose -f docker-compose.test.yml up --build --abort-on-container-exit
-        - echo "Tests passed!"
-
-build_artifacts:
-    stage: build
+deploy:
+    stage: deploy
     image: docker:20.10.16
     services:
         - name: docker:20.10.16-dind
@@ -34,39 +12,37 @@ build_artifacts:
     before_script:
         - echo $REGISTRY_PASSWORD | docker login -u $REGISTRY_USER --password-stdin $CI_REGISTRY
     script:
+        # --- 1. RUN TESTS ---
+        - echo "Running backend integration tests and security scan..."
+        - apk add --no-cache docker-compose
+        - docker build --target test -t test-image .
+        - docker run --rm test-image npm audit --audit-level=high
+        - docker-compose -f docker-compose.test.yml up --build --abort-on-container-exit
+        - echo "Tests passed!"
+
+        # --- 2. BUILD BACKEND ---
         - echo "Building and pushing backend image..."
         - docker build -t ${CI_REGISTRY_IMAGE}:latest .
         - docker push ${CI_REGISTRY_IMAGE}:latest
+
+        # --- 3. BUILD FRONTEND ---
         - echo "Building frontend..."
         - apk add --no-cache git
         - git clone "https://gitlab-ci-token:${CI_JOB_TOKEN}@gitlab.com/taskmanager-group/taskmanager_frontend.git" ../frontend
         - docker run --rm -v "$(pwd)/../frontend:/app" -w /app node:22 sh -c "npm ci && npm run build"
         - mv ../frontend/dist ./frontend-dist
-        - echo "Checking artifact sizes..."
-        - du -sh docker-compose.prod.yml nginx/ frontend-dist/
-    artifacts:
-        paths:
-            - docker-compose.prod.yml
 
-            - nginx/
-            - frontend-dist/
-
-deploy_to_ec2:
-    stage: deploy
-    image: alpine:latest
-    needs:
-        - test_backend
-        - build_artifacts
-    script:
-        - apk add --no-cache openssh-client docker-compose rsync
+        # --- 4. DEPLOY TO EC2 ---
+        - echo "Deploying all artifacts to server..."
+        - apk add --no-cache openssh-client rsync
         - echo "$SSH_PRIVATE_KEY" | base64 -d > deploy_key.pem
         - chmod 600 deploy_key.pem
         - export SSH_OPTIONS="-i deploy_key.pem -o StrictHostKeyChecking=no"
-        - mkdir -p ~/.ssh && chmod 700 ~/.ssh
         - ssh-keyscan $SSH_SERVER_IP >> ~/.ssh/known_hosts
-        - echo "Deploying artifacts to server..."
+
         - ssh $SSH_OPTIONS ${SSH_USER}@${SSH_SERVER_IP} "rm -rf ~/taskmanager-prod && mkdir -p ~/taskmanager-prod"
         - rsync -avz -e "ssh $SSH_OPTIONS" ./docker-compose.prod.yml ./nginx ./frontend-dist ${SSH_USER}@${SSH_SERVER_IP}:~/taskmanager-prod/
+
         - |
             ssh $SSH_OPTIONS ${SSH_USER}@${SSH_SERVER_IP} "
               cd ~/taskmanager-prod &&
@@ -91,16 +67,5 @@ deploy_to_ec2:
               docker compose up -d --force-recreate &&
               docker system prune -af
             "
-pages:
-    stage: pages
-    image: node:22-alpine
-    script:
-        - echo "Installing documentation generator..."
-        - npm install -g @redocly/cli
-        - echo "Building documentation..."
-        - redocly build-docs swagger.yaml -o public/index.html
-    artifacts:
-        paths:
-            - public
     rules:
         - if: $CI_COMMIT_BRANCH == 'main'
