--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,8 +1,11 @@
 stages:
+    - test
+    - build
     - deploy
+    - pages
 
-deploy:
-    stage: deploy
+test:
+    stage: test
     image: docker:20.10.16
     services:
         - name: docker:20.10.16-dind
@@ -10,64 +13,115 @@ deploy:
     variables:
         DOCKER_HOST: tcp://docker:2375
     before_script:
-        - echo $REGISTRY_PASSWORD | docker login -u $REGISTRY_USER --password-stdin $CI_REGISTRY
-    script:
-        # --- 1. RUN TESTS ---
-        - echo "Running backend integration tests and security scan..."
         - apk add --no-cache docker-compose
-        - docker build --target test -t test-image .
-        - docker run --rm test-image npm audit --audit-level=high
+    script:
+        - echo "Running security scan for known vulnerabilities..."
+        - docker build --target deps -t deps-image .
+        - docker run --rm deps-image npm audit --audit-level=high
+
+        - echo "Running backend integration tests..."
         - docker-compose -f docker-compose.test.yml up --build --abort-on-container-exit
         - echo "Tests passed!"
 
-        # --- 2. BUILD BACKEND ---
+build:
+    stage: build
+    image: docker:20.10.16
+    services:
+        - name: docker:20.10.16-dind
+          alias: docker
+    variables:
+        DOCKER_HOST: tcp://docker:2375
+    needs:
+        - test
+    before_script:
+        - echo $REGISTRY_PASSWORD | docker login -u $REGISTRY_USER --password-stdin $CI_REGISTRY
+    script:
         - echo "Building and pushing backend image..."
-        - docker build -t ${CI_REGISTRY_IMAGE}:latest .
+        - docker build --target runner -t ${CI_REGISTRY_IMAGE}:latest .
         - docker push ${CI_REGISTRY_IMAGE}:latest
 
-        # --- 3. BUILD FRONTEND ---
         - echo "Building frontend..."
         - apk add --no-cache git
         - git clone "https://gitlab-ci-token:${CI_JOB_TOKEN}@gitlab.com/taskmanager-group/taskmanager_frontend.git" ../frontend
         - docker run --rm -v "$(pwd)/../frontend:/app" -w /app node:22 sh -c "npm ci && npm run build"
         - mv ../frontend/dist ./frontend-dist
+    artifacts:
+        paths:
+            - docker-compose.prod.yml
+            - nginx/
+            - frontend-dist/
+        expire_in: 1 hour
 
-        # --- 4. DEPLOY TO EC2 ---
-        - echo "Deploying all artifacts to server..."
+deploy:
+    stage: deploy
+    image: alpine:latest
+    needs:
+        - build
+    before_script:
         - apk add --no-cache openssh-client rsync
         - echo "$SSH_PRIVATE_KEY" | base64 -d > deploy_key.pem
         - chmod 600 deploy_key.pem
-        - export SSH_OPTIONS="-i deploy_key.pem -o StrictHostKeyChecking=no"
-        - mkdir -p ~/.ssh
-        - chmod 700 ~/.ssh
+        - mkdir -p ~/.ssh && chmod 700 ~/.ssh
         - ssh-keyscan $SSH_SERVER_IP >> ~/.ssh/known_hosts
+    script:
+        - echo "Deploying all artifacts to server..."
+        - export SSH_OPTIONS="-i deploy_key.pem -o StrictHostKeyChecking=no"
 
         - ssh $SSH_OPTIONS ${SSH_USER}@${SSH_SERVER_IP} "rm -rf ~/taskmanager-prod && mkdir -p ~/taskmanager-prod"
         - rsync -avz -e "ssh $SSH_OPTIONS" ./docker-compose.prod.yml ./nginx ./frontend-dist ${SSH_USER}@${SSH_SERVER_IP}:~/taskmanager-prod/
 
         - |
             ssh $SSH_OPTIONS ${SSH_USER}@${SSH_SERVER_IP} "
-              cd ~/taskmanager-prod &&
-              mv docker-compose.prod.yml docker-compose.yml &&
-              docker login -u ${REGISTRY_USER} -p ${REGISTRY_PASSWORD} ${CI_REGISTRY} &&
+              set -e # Exit immediately if a command exits with a non-zero status.
+              cd ~/taskmanager-prod
               
-              echo 'DATABASE_URL=postgresql://myuser:mypassword@db:5432/taskmanager' > .env &&
-              echo 'PORT=3000' >> .env &&
-              echo 'JWT_ACCESS_SECRET=${JWT_ACCESS_SECRET}' >> .env &&
-              echo 'JWT_REFRESH_SECRET=${JWT_REFRESH_SECRET}' >> .env &&
-              echo 'JWT_ACCESS_EXPIRATION=${JWT_ACCESS_EXPIRATION}' >> .env &&
-              echo 'JWT_REFRESH_EXPIRATION=${JWT_REFRESH_EXPIRATION}' >> .env &&
-              echo 'GOOGLE_CLIENT_ID=${GOOGLE_CLIENT_ID}' >> .env &&
-              echo 'GOOGLE_CLIENT_SECRET=${GOOGLE_CLIENT_SECRET}' >> .env &&
-              echo 'RECAPTCHA_SECRET_KEY=${RECAPTCHA_SECRET_KEY}' >> .env &&
-              echo 'GOOGLE_CALLBACK_URL=${GOOGLE_CALLBACK_URL}' >> .env &&
-              echo 'FRONTEND_URL=${FRONTEND_URL}' >> .env &&
-              echo 'NODE_ENV=production' >> .env &&
+              echo '==> Renaming compose file...'
+              mv docker-compose.prod.yml docker-compose.yml
+              
+              echo '==> Logging into GitLab Registry...'
+              docker login -u ${REGISTRY_USER} -p ${REGISTRY_PASSWORD} ${CI_REGISTRY}
+              
+              echo '==> Creating .env file on server...'
+              echo 'DATABASE_URL=postgresql://myuser:mypassword@db:5432/taskmanager' > .env
+              echo 'PORT=3000' >> .env
+              echo 'JWT_ACCESS_SECRET=${JWT_ACCESS_SECRET}' >> .env
+              echo 'JWT_REFRESH_SECRET=${JWT_REFRESH_SECRET}' >> .env
+              echo 'JWT_ACCESS_EXPIRATION=${JWT_ACCESS_EXPIRATION}' >> .env
+              echo 'JWT_REFRESH_EXPIRATION=${JWT_REFRESH_EXPIRATION}' >> .env
+              echo 'GOOGLE_CLIENT_ID=${GOOGLE_CLIENT_ID}' >> .env
+              echo 'GOOGLE_CLIENT_SECRET=${GOOGLE_CLIENT_SECRET}' >> .env
+              echo 'RECAPTCHA_SECRET_KEY=${RECAPTCHA_SECRET_KEY}' >> .env
+              echo 'GOOGLE_CALLBACK_URL=${GOOGLE_CALLBACK_URL}' >> .env
+              echo 'FRONTEND_URL=${FRONTEND_URL}' >> .env
+              echo 'NODE_ENV=production' >> .env
 
-              docker compose pull app &&
-              docker compose run --rm app npx prisma migrate deploy &&
-              docker compose up -d --force-recreate &&
+              echo '==> Pulling the latest backend image...'
+              docker compose pull app
+              
+              echo '==> Running database migrations...'
+              docker compose run --rm app npx prisma migrate deploy
+              
+              echo '==> Restarting services...'
+              docker compose up -d --force-recreate
+              
+              echo '==> Cleaning up old images...'
               docker system prune -af
+
+              echo '==> Deployment successful!'
             "
+    rules:
+        - if: $CI_COMMIT_BRANCH == 'main'
+
+pages:
+    stage: pages
+    image: node:22-alpine
+    script:
+        - echo "Installing Redocly CLI..."
+        - npm install -g @redocly/cli
+        - echo "Building documentation..."
+        - redocly build-docs swagger.yaml -o public/index.html
+    artifacts:
+        paths:
+            - public
     rules:
         - if: $CI_COMMIT_BRANCH == 'main'
