--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -5,8 +5,14 @@ upstream taskmanager_api {
 server {
     listen 80;
     server_name tasks.webservertaskmanager.com;
-    location /.well-known/acme-challenge/ { root /var/www/html; }
-    location / { return 301 https://$host$request_uri; }
+
+    location /.well-known/acme-challenge/ { 
+        root /var/www/html; 
+    }
+
+    location / { 
+        return 301 https://$host$request_uri; 
+    }
 }
 
 server {
@@ -19,12 +25,16 @@ server {
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
     location /api {
+        rewrite /api/(.*) /$1 break;
+
         proxy_pass http://taskmanager_api;
-        proxy_set_header Host $host;
+        
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+        
+        proxy_buffering on;
     }
 
     location / {
