--- a/tsconfig.jest.json
+++ b/tsconfig.jest.json
@@ -1,7 +1,7 @@
 {
     "extends": "./tsconfig.json",
     "compilerOptions": {
-        "esModuleInterop": true
+        "rootDir": "."
     },
-    "include": ["__tests__/**/*.ts"]
+    "include": ["src/**/*.ts", "__tests__/**/*.ts"]
 }
