--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,3 +1,59 @@
+stages:
+    - test
+    - build
+    - deploy
+    - pages
+
+test:
+    stage: test
+    image: docker:20.10.16
+    services:
+        - name: docker:20.10.16-dind
+          alias: docker
+    variables:
+        DOCKER_HOST: tcp://docker:2375
+    before_script:
+        - apk add --no-cache docker-compose
+    script:
+        - echo "Running security scan for known vulnerabilities..."
+        - docker build --target deps -t deps-image .
+        - docker run --rm deps-image npm audit --audit-level=high
+
+        - echo "Running backend integration tests..."
+        - docker-compose -f docker-compose.test.yml up --build --abort-on-container-exit
+        - echo "Tests passed!"
+
+build:
+    stage: build
+    image: docker:20.10.16
+    services:
+        - name: docker:20.10.16-dind
+          alias: docker
+    variables:
+        DOCKER_HOST: tcp://docker:2375
+    needs:
+        - test
+    before_script:
+        - echo $REGISTRY_PASSWORD | docker login -u $REGISTRY_USER --password-stdin $CI_REGISTRY
+    script:
+        - echo "Building and pushing backend image..."
+        - >
+            docker build
+            --build-arg GIT_COMMIT_SHA=$CI_COMMIT_SHORT_SHA
+            --target runner
+            -t ${CI_REGISTRY_IMAGE}:${CI_COMMIT_SHORT_SHA}
+            .
+        - docker push ${CI_REGISTRY_IMAGE}:${CI_COMMIT_SHORT_SHA}
+        - echo "Building frontend..."
+        - apk add --no-cache git
+        - git clone "https://gitlab-ci-token:${CI_JOB_TOKEN}@gitlab.com/taskmanager-group/taskmanager_frontend.git" ../frontend
+        - docker run --rm -v "$(pwd)/../frontend:/app" -w /app node:22 sh -c "npm ci && npm run build"
+        - mv ../frontend/dist ./frontend-dist
+
+        - echo "Building and pushing NGINX image..."
+        - docker build -f nginx/Dockerfile -t ${CI_REGISTRY_IMAGE}/nginx:${CI_COMMIT_SHORT_SHA} .
+        - docker push ${CI_REGISTRY_IMAGE}/nginx:${CI_COMMIT_SHORT_SHA}
+
 deploy:
     stage: deploy
     image: alpine:latest
